--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="stylesheet" href="/assets/css/simple.min.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Alegreya:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/css/fonts.css" />
     <link href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" type="application/rss+xml" rel="alternate" title="{{ site.title }}" />
   </head>
 
@@ -24,7 +22,7 @@
       {% include navigation.html %}
     </header>
 
-    <main>
+    <main id="top">
       <br />
       {{ content }}
     </main>
