--- a/_includes/post_buttons.html
+++ b/_includes/post_buttons.html
@@ -12,6 +12,7 @@
 		cc.style.display = "block";
 		var cd = document.createElement('div');
 		cd.setAttribute("id", "disqus_thread");
+		cd.style.all = "initial";
 		var cs = document.createElement('script');
 		cs.src = 'https://blog-salif-eu.disqus.com/embed.js';
 		cs.setAttribute('data-timestamp', +new Date());
