--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,7 @@ layout: default
 
 {{ content }}
 
-<hr style="width:50%; margin: 3rem auto; margin-bottom: 1rem;" />
-
+<hr style="width:50%; margin: 3rem auto;" />
 <header><nav>
 <a id="button_top">Върни се горе</a>
 {% if page.comments %}
@@ -24,6 +23,6 @@ layout: default
 
 {% include post_buttons.html %}
 
+<noscript>Позволете JavaScript за да видите <a href="https://disqus.com/?ref_noscript"> коментарите.</a></noscript>
 <section id="comments_container" style="display: none;">
-    <noscript>Позволете JavaScript за да видите <a href="https://disqus.com/?ref_noscript"> коментарите.</a></noscript>
 </section>
