Премахни Sans шрифта, добави светла тема и бутони

--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,2 +1,2 @@
-<script data-goatcounter="https://blosaleu.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-<noscript><img src="https://blosaleu.goatcounter.com/count?p=/test-noscript" /></noscript>
+<script data-goatcounter="https://{{ site.goatcounter_code }}.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+<noscript><img src="https://{{ site.goatcounter_code }}.goatcounter.com/count?p=/test-noscript" /></noscript>
