--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,4 +2,10 @@
   {% for item in site.data.navigation %}
   <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
   {% endfor %}
+  <a href="https://{{ site.translate_code }}.translate.goog{{ page.url | prepend: site.baseurl }}?_x_tr_sl={{ site.lang }}&_x_tr_tl=auto"
+   target="_blank" title="Translate this page">
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: inline-block; width: 1rem; vertical-align: sub;" viewBox="0 0 24 24" 
+    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path class="st0" 
+    d="M2,16c0.1,0,8-5,9-7c0.6-1.3,1-5,1-5h3H1h7V1" /><line class="st0" x1="4" y1="8" x2="12" y2="16" /><polygon class="st0" 
+    points="15,19 21,19 23,23 18,11 13,23 " /></svg></a>
 </nav>
