--- a/_includes/post_buttons.html
+++ b/_includes/post_buttons.html
@@ -1,14 +1,24 @@
+<hr style="width:50%; margin: 3rem auto;" />
+<header><nav>
+<a id="button_top" href="#" title="Към началото на страницата">Нагоре</a>
+{% if page.comments %}
+<a id="button_comments" href="#">Към коментарите</a>
+{% endif %}
+<a href="https://www.addtoany.com/share#url={{ page.url | prepend: site.baseurl | prepend: site.url }}" target="_blank" title="Споделяне на публикацията">Споделяне</a>
+<a id="button_print" href="#" title="Оптечатване на страницата">Отпечатване</a>
+</nav></header>
 
 <script>
-	var disqus_config = function () {
-	this.page.url = document.querySelector("link[rel='canonical']").getAttribute("href");
-	this.page.identifier = "{{ page.url }}";
-	};
 	document.getElementById("button_top").addEventListener("click", function(e){
 		e.preventDefault();
 		document.getElementById("top").scrollIntoView(true);
 		return false;
 	});
+	// {% if page.comments %}
+	var disqus_config = function () {
+		this.page.url = document.querySelector("link[rel='canonical']").getAttribute("href");
+		this.page.identifier = "{{ page.url }}";
+	};
 	document.getElementById("button_comments").addEventListener("click", function(e){
 		e.preventDefault();
 		var cc = document.getElementById("comments_container");
@@ -24,6 +34,7 @@
 		this.style.display="none";
 		return false;
 	});
+	// {% endif %}
 	document.getElementById("button_print").addEventListener("click", function(e){
 		e.preventDefault();
 		window.print();
