Нова публикация „направи-си-блог“

--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,2 +1,4 @@
+{% if jekyll.environment == "production" %}
 <script data-goatcounter="https://{{ site.goatcounter_code }}.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 <noscript><img src="https://{{ site.goatcounter_code }}.goatcounter.com/count?p=/test-noscript" /></noscript>
+{% endif %}
