--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ page.title }}</title>
-    <meta name="description" content="{{ page.description }}" />
+    <title>{{ page.title | default: site.title }}</title>
+    <meta name="description" content="{{ page.description | default: site.description }}" />
     <meta name="robots" content="index, follow" />
-    {% include head.html %}
+    {% include icons.html %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="stylesheet" href="/assets/css/simple.min.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/fonts.css" />
-    <link href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" type="application/rss+xml" rel="alternate" title="{{ site.title }}" />
+    <link href="{{ site.baseurl | prepend: site.url }}/feed.xml" type="application/rss+xml" rel="alternate" title="{{ site.title }}" />
   </head>
 
   <body>
@@ -29,7 +29,7 @@
 
     <footer>
       <p>
-        <a href="/feed.xml">RSS емисия</a>
+        <a href="/абониране">RSS абониране</a>
         {% if site.git_web_base %}• <a href="{{ site.git_web_base }}{{ page.path }}">Преглед на кода</a>{% endif %}
       </p>
     </footer>
