--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ page.title | default: site.title }}</title>
-    <meta name="description" content="{{ page.description | default: site.description }}" />
+    {% seo %}
     <meta name="robots" content="index, follow" />
-    {% include icons.html %}
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    {% feed_meta %}  
     <link rel="stylesheet" href="/assets/css/simple.min.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/fonts.css" />
-    <link href="{{ site.baseurl | prepend: site.url }}/feed.xml" type="application/rss+xml" rel="alternate" title="{{ site.title }}" />
+    {% include icons.html %}
   </head>
 
   <body>
