--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,10 @@ layout: default
 <h1 class="post-title">{{ page.title }}</h1>
 {% assign author = site.data.authors[page.author] %}
 {% if author %}
-    <p class="post-meta">Написано от: <a target="blank" href="{{ author.url }}">{{ author.name }}</a> &nbsp;|&nbsp; {{ page.date | date: "%d.%m.%Y" }}</p>
+    <p class="post-meta"><a target="blank" href="{{ author.url }}">{{ author.name }}</a> &nbsp;|&nbsp;
+        {{ page.date | date: "%d.%m.%Y" }} &nbsp;|&nbsp;
+        {% if page.last_modified_at %}посл. промяна: {{ page.last_modified_at | date: "%d.%m.%Y" }} &nbsp;|&nbsp;{% endif %}
+        {{ page.content | strip_html | number_of_words }} думи</p>
 {% endif %}
 
 <p class="sub-heading">{{ page.description }}</p>
