--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% seo %}
     <meta name="robots" content="index, follow" />
-    {% feed_meta %}  
+    {% feed_meta %}
     <link rel="stylesheet" href="/assets/css/simple.min.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/fonts.css" />
@@ -27,7 +27,7 @@
 
     <footer>
       <p>
-        <a href="/абониране">RSS абониране</a>
+        <a href="/абониране">RSS (Atom)</a>
         {% if site.git_web_base %}• <a href="{{ site.git_web_base }}{{ page.path }}">Преглед на кода</a>{% endif %}
       </p>
     </footer>
