Добавяне на Gemfile.lock и други промени

--- a/_includes/verification.html
+++ b/_includes/verification.html
@@ -1,3 +1,4 @@
 <div style="display: none;">
-	<a rel="me" href="https://calckey.world/@13">Firefish</a>
+    <a rel="me" href="https://catodon.social/@sal">Catodon</a>
+    <a rel="me" href="https://fe.disroot.org/@salif">Disroot</a>
 </div>
